mobile overflow solved

--- a/src/css/bg1.css
+++ b/src/css/bg1.css
@@ -18,7 +18,7 @@ body {
     /* background: url("https://images.unsplash.com/photo-1528819027803-5473f2bf7633?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxleHBsb3JlLWZlZWR8OXx8fGVufDB8fHx8fA%3D%3D"), black; */
     /* color: #eee; */
 
-    height: 100%;
+    height: 100vh;
     /* background-image: ; */
     /* min-width: 360px; */
     width: 100vw;
