--- a/src/css/media.css
+++ b/src/css/media.css
@@ -30,8 +30,8 @@
     }
 
     .folderCard {
-        width: 4.1rem;
-        height: 4.5rem;
+        width: 4.4rem;
+        height: 4.8rem;
     }
 
     .folderI {
@@ -54,8 +54,8 @@
 
     .myFolder {
         font-size: 1.1rem;
-        width: 6rem;
-        height: 7rem;
+        width: 6.4rem;
+        height: 7.4rem;
     }
 
     .myFolder .folderI {
